# beam-health-backend

./: README.md  main.py  pyproject.toml  run.sh  test_upload.py
data/: appointments.json  insurances.json  patients.json
scripts/: generate_data.py
